# robotics

./: README.md  my_moveit_script.py  my_publisher.py  packet_sniffer.py  port_sniffer.py
engineer/devel/: .catkin  .rosinstall  setup.sh
engineer/devel/lib/pkgconfig/: engineer_2dnav.pc  engineer_nav.pc  my_hector_mapping.pc  my_laser_matcher.pc  ros_qt_controller.pc
engineer/devel/lib/ros_qt_controller/: twist_control_node
engineer/devel/share/engineer_2dnav/cmake/: engineer_2dnavConfig.cmake
engineer/devel/share/engineer_nav/cmake/: engineer_navConfig.cmake
engineer/devel/share/my_hector_mapping/cmake/: my_hector_mappingConfig.cmake
engineer/devel/share/my_laser_matcher/cmake/: my_laser_matcherConfig.cmake
engineer/src/engineer_2dnav/: CMakeLists.txt
engineer/src/engineer_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
engineer/src/engineer_2dnav/launch/: engineer_configuration.launch  move_base.launch
engineer/src/engineer_nav/: CMakeLists.txt
engineer/src/engineer_nav/launch/: move_base.launch  move_base_blank_map.launch
engineer/src/my_hector_mapping/: CMakeLists.txt
engineer/src/my_hector_mapping/launch/: my_launch.launch
engineer/src/my_laser_matcher/: CMakeLists.txt
engineer/src/my_laser_matcher/launch/: my_gmapping_launch.launch  my_localize.launch
hokuyo/devel/: .catkin  .rosinstall  setup.sh
hokuyo/devel/include/urg_node/: Status.h
hokuyo/devel/lib/pkgconfig/: urg_node.pc
hokuyo/devel/lib/urg_node/: getID  urg_node
(+3 files in other folders)
